@@ -25,6 +25,7 @@ lintian-brush (0.35) UNRELEASED; urgency=medium
   * out-of-date-standards-version: don't update standards version if
     none is set.
   * package.json: bugs field can be a dict.
+  * upstream-metadata: Don't fail when META.yml file fails to parse.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 08 Oct 2019 21:48:15 +0000
 
